<resources>
    <string name="app_name">IoTSensorShop</string>

    <string name="first_slide">Choose Your Products</string>
    <string name="second_slide">Fast Delivery</string>
    <string name="third_slide">Good Service</string>
    <string name="description">Description</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_home">Home</string>
    <string name="profile">Profile</string>
    <string name="category">Category</string>
    <string name="new_products">New Products</string>
    <string name="my_cart">My Cart</string>
    <string name="forgotPassword_hint">Forgot Password?</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="manage_products">Manage Products</string>
    <string name="purchase_history">Purchase History</string>
    <string name="order">Order</string>
    <string name="chat_room">Chat Room</string>
    <string name="chat_bot">Chatbot</string>
    <string name="video_call">Video Conference</string>
    <string name="products">All Products</string>
</resources>