<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/menu_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/menu_category"
            android:title="@string/category" />
        <item
            android:id="@+id/nav_new_products"
            android:icon="@drawable/menu_new_products"
            android:title="@string/new_products" />
        <item
            android:id="@+id/nav_my_carts"
            android:icon="@drawable/menu_my_carts"
            android:title="@string/my_cart" />
        <item
            android:id="@+id/nav_chat_room"
            android:icon="@drawable/chat_room"
            android:title="@string/chat_room" />
        <item
            android:id="@+id/nav_chat_bot"
            android:icon="@drawable/ic_bot"
            android:title="@string/chat_bot" />
        <item
            android:id="@+id/nav_video_call"
            android:icon="@drawable/video_call"
            android:title="@string/video_call" />
    </group>

    <item android:title="Others">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="Logout" />
        </menu>
    </item>
</menu>